fix Spark 3.3 Java 17 tests break